--- a/index.html
+++ b/index.html
@@ -5,9 +5,23 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mirza Adnan Portfolio</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <section class="top-banner">
+        <div class="half-width">
+            <h1>Welcome to</h1>
+            <h1><span class="orange-color">Mirza Adnan</span> World !</h1>
+            <h3>Dream Big and Work Hard</h3>
+            <p>Dreaming big is easy but achieving them is rather hard. I love to travel and explore the world around me. But that doesn't pay my bills. That's why I am learning and mastering web development. I will not stop until I become the Web Development Hero.</p>
+            <a class="link-button" target="_blank" href="https://www.linkedin.com/in/mirza-adnan-310b81184/">Hire Me</a>
+        </div>
+        <div class="half-width">
+            <img src="images/adnan.png" alt="">
+        </div>
+    </section>
 </body>
 </html>
