--- a/index.html
+++ b/index.html
@@ -23,5 +23,16 @@
             <img src="images/adnan.png" alt="">
         </div>
     </section>
+    <section class="dream-big">
+        <div class="half-width">
+            <img src="images/git.png" alt="">
+        </div>
+        <div class="half-width">
+            <h1>Dream Big !</h1>
+            <h3>Become a web developer</h3>
+            <p id="dream-big-text">I've done developing a quizgame based website as project during my B.Sc. degree. Again I am sharpening my skills and learn new things from programming-Hero course. I already learned the basic HTML and CSS. I can build any simple website. I can even teach my grandma how to make simple website. My goal is to build 3 websites and learn advanced topics.</p>
+            <a class="link-button" target="_blank" href="">Download Resume</a>
+        </div>
+    </section>
 </body>
 </html>
